crates/analyzer/tests/snapshots/errors__map_three_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `Map` expects 2 generic arguments, but 3 were provided
  ┌─ [snippet]:3:10
  │
3 │   let x: Map<u8, u8, u8>
  │          ^^^ --  --  -- supplied 3 generic arguments
  │          │            
  │          expects 2 generic arguments


